# shell-ter

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  batchfile.txt  conanfile.txt  settings.json
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
include/: commands.h  manager.h  monitor.h  prompt.h  signals.h
monitor_prometheus/: CMakeLists.txt  Doxyfile
monitor_prometheus/include/: cjson_metrics.h  expose_metrics.h  metrics.h
monitor_prometheus/lib/prom-client-c/promhttp/src/: promhttp.c
monitor_prometheus/src/: cjson_metrics.c  expose_metrics.c  main.c  metrics.c
src/: commands.c  main.c  manager.c  monitor.c  prompt.c  signals.c
tests/: CMakeLists.txt  test_shellter.c
